<resources>
    <string name="app_name">ProjectB</string>

    <string name="mytitle">hello hldohoakdshfl</string>
    <string name="title">Let\'s sign you in.\n Welcome back \n You\'ve been missed.</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Don\'t have an account? Join us</string>

    <string name="field_required">"This field is required"</string>
    <string name="peyto_desc">TinyPNG uses smart lossy compression techniques to reduce the file size of your WEBP, JPEG and PNG files. By selectively decreasing the number of colors in the image, fewer bytes are required to store the data. The effect is nearly invisible but it makes a very large difference in file size!</string>

    <string-array name="weeks">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="good_evening">Good Evening</string>
    <string name="how_are_you">How are you?</string>
    <string name="nice_to_meet_you">Nice to meet you</string>
    <string name="have_a_nice_day">Have a nice day</string>
    <string name="good_morning">Good Morning</string>

</resources>